assets/scss/_styles.scss
html {
  scroll-behavior: smooth;
}

body {
  text-rendering: optimizeLegibility;
  font-feature-settings: "calt" 0, "tnum", "case", "rlig", "cv01", "cv02", "cv03", "cv04", "cv07";
}

::-webkit-scrollbar {
  @apply w-2;
  @apply h-2;
  @apply bg-gray-300;
}

::-webkit-scrollbar-thumb {
  @apply bg-gray-500;

  &:hover {
    @apply bg-gray-600;
  }
}

table {
  @apply w-full;
  @apply border-collapse;
}

table, th, td {
  @apply p-2;
  @apply border;
  @apply border-gray-500;
}

th {
  @apply font-bold;
  @apply text-gray-600;
}

button {
  @apply px-4;
  @apply py-2;
  @apply bg-white;
  @apply text-gray-700;
  @apply border;
  @apply border-gray-500;
  @apply shadow-sm;
  @apply rounded-md;
  @apply transition;
  @apply ease-in-out;
  @apply duration-150;

  &:hover {
    @apply bg-gray-100;
  }

  &:focus {
    @apply outline-none;
  }
}

